--- a/src/www/index.html
+++ b/src/www/index.html
@@ -9,7 +9,7 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <link href="views/tour/tour.css" rel="stylesheet">
+    <link href="views/start/start.css" rel="stylesheet">
     <link href="views/home/home.css" rel="stylesheet">
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -24,9 +24,10 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="views/home/result.js"></script>
 
   </head>
-  <body ng-app="App">
+  <body ng-app="Momsmed">
 
     <ion-nav-bar class="bar-positive">
       <ion-nav-back-button class="button-clear">
